--- a/src/main/resources/static/project/assets/css/step.css
+++ b/src/main/resources/static/project/assets/css/step.css
@@ -5,11 +5,19 @@
 }
 
 .work{
-
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
 }
 .work.node{
 
 }
+
+/**
+    已完成节点样式
+ */
+
 /**
     已完成节点样式
  */
@@ -34,16 +42,23 @@
 .work.node text{
     fill: black;
 }
+.work.node[active=true] rect{
+    fill: #E0FFFF;
+}
+
+.work.node[pressed=true] rect{
+    fill: #ADFF2F;
+}
 /**
     隐藏工作节点工作菜单
  */
-#nodeTool {
+#nodeMenu {
     visibility:hidden
 }
 /**
     显示工具节点工作菜单
  */
-#nodeTool.active {
+#nodeMenu.active {
     visibility:visible;
 
 }
@@ -51,40 +66,45 @@
 /**
     工作节点工具菜单按钮样式
  */
-#nodeTool circle{
+#nodeMenu circle{
      fill:#6495ED;
  }
-#nodeTool g:hover > circle{
+#nodeMenu g:hover > circle{
     fill:#66CDAA;
 }
 
-#stepTool {
+#stepMenu {
     visibility:hidden
 }
 
-#stepTool.active {
+#stepMenu.active {
     visibility:visible;
 }
-#stepTool rect{
+#stepMenu rect{
     fill:#1874CD;
 }
 
-#stepTool g:hover > rect{
+#stepMenu g:hover > rect{
     fill:#66CDAA;
 }
 
-#pathTool {
+#pathMenu {
     visibility:hidden;
 }
-#pathTool.active{
+#pathMenu.active{
     visibility:visible;
 }
-#pathTool circle{
+#pathMenu circle{
     fill:#7D7D7D;
 }
-#pathTool g:hover > circle{
+#pathMenu g:hover > circle{
     fill:#CD3333;
 }
+
+
+
+
+
 
 
 
@@ -103,12 +123,12 @@
  */
 .work.step.border{
     stroke:#D9D9D9;
-    fill: #ffffff;
+    fill: transparent ;
     stroke-width:2
 }
 .work.step.border:hover{
     stroke:#fac400;
-    fill: #ffffff;
+    fill: transparent ;
     stroke-width:2
 }
 /* 已完成的节点样式 */
